@@ -1,3 +1,10 @@
+2012-04-19 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
+	* primesieve.c: New file, with functions from mpz/oddfac_1.c .
+	* mpz/oddfac_1.c (bitwise_primesieve): Re-moved.
+	* Makefile.am (libgmp_la_SOURCES): Add primesieve.c .
+	* gmp-impl.h (gmp_primesieve): Declare.
+
 2012-04-17  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/x86_64/coreisbr/aorsmul_1.asm: Fix some DOS64 issues.
